--- a/src/components/NavDropdowns/exploredrop.css
+++ b/src/components/NavDropdowns/exploredrop.css
@@ -10,15 +10,21 @@
   justify-content: center;
   align-items: center;
   gap: 30px;
+  position: fixed;
+  z-index: 1;
+  -webkit-box-shadow: 0 4px 6px -6px #222;
+  -moz-box-shadow: 0 4px 6px -6px #222;
+  box-shadow: 0 4px 6px -6px #222;
 }
 .left-explore {
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 20px;
 }
 .right-explore {
   display: flex;
   flex-direction: column;
+  gap: 20px;
   height: 100%;
   align-items: flex-start;
 }
@@ -39,7 +45,7 @@
   gap: 3px;
 }
 .top-reference {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   color: rgb(5, 15, 25);
 }
