--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -59,6 +59,8 @@
   height: 100%;
   display: flex;
   align-items: center;
+  font-family: "Coinbase Sans";
+  font-weight: 600;
 }
 .navlinks:hover {
   transition: ease-in;
