--- a/src/fonts/transfonter.org-20240315-030107/stylesheet.css
+++ b/src/fonts/transfonter.org-20240315-030107/stylesheet.css
@@ -44,7 +44,7 @@
 }
 
 @font-face {
-  font-family: "Coinbase Sans";
+  font-family: "Coinbase Sans1";
   src: url("CoinbaseSans-Regular.woff2") format("woff2"),
     url("CoinbaseSans-Regular.woff") format("woff");
   font-weight: normal;
