--- a/src/components/Buttons/signin.css
+++ b/src/components/Buttons/signin.css
@@ -8,8 +8,10 @@
   border: none;
   justify-content: center;
   align-items: center;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
+  font-family: "Coinbase Sans";
+  -webkit-font-smoothing: antialiased;
 }
 
 .signin-button:hover {
