--- a/src/components/Buttons/signup.css
+++ b/src/components/Buttons/signup.css
@@ -8,8 +8,10 @@
   justify-content: center;
   align-items: center;
   color: white;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
+  font-family: "Coinbase Sans";
+  -webkit-font-smoothing: antialiased;
 }
 
 .signup-button:hover {
