--- a/src/components/NavDropdowns/exploredrop.css
+++ b/src/components/NavDropdowns/exploredrop.css
@@ -1,5 +1,4 @@
 .explore-wrapper {
-  height: 100px;
   width: 100%;
   padding: 40px 45px;
   background: rgb(255, 255, 255);
@@ -8,7 +7,7 @@
   border-bottom: 1px solid rgb(236, 239, 241);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 30px;
   position: fixed;
   z-index: 1;
@@ -38,6 +37,10 @@
 .graph-image-wrapper {
   display: flex;
   gap: 12px;
+  font-family: "Coinbase Sans";
+}
+.graph-image-wrapper:hover {
+  cursor: pointer;
 }
 .logo-references-wrapper {
   display: flex;
@@ -45,7 +48,7 @@
   gap: 3px;
 }
 .top-reference {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
   color: rgb(5, 15, 25);
 }
