--- a/src/components/NavDropdowns/individuals.css
+++ b/src/components/NavDropdowns/individuals.css
@@ -10,6 +10,7 @@
   align-items: flex-start;
   gap: 40px;
   font-size: 16px;
+  font-family: "Cooinbase Sans";
   position: fixed;
   z-index: 1;
   -webkit-box-shadow: 0 4px 6px -6px #222;
