--- a/src/components/Navbar/banner.css
+++ b/src/components/Navbar/banner.css
@@ -5,7 +5,14 @@
   background-color: rgb(0, 82, 255);
   color: white;
   flex-grow: 1;
-  font-size: 18px;
+  font-size: 16px;
   min-width: 100%;
-  font-weight: 600;
+  font-weight: 500;
+  font-family: "Coinbase Sans";
+  -webkit-font-smoothing: antialiased;
+}
+@media (max-width: 1050px) {
+  .banner-wrapper {
+    font-size: 14px;
+  }
 }
