--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,12 @@
   /* max-width: 1280px; */
   margin: 0 auto;
   max-width: 100%;
-  box-sizing: border-box;
 }
 body {
   margin: 0;
+}
+* {
+  box-sizing: border-box;
 }
 
 .home-wrapper {
