--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -34,6 +34,7 @@
   margin: 0px 242px;
   width: 100%;
   min-height: 66px;
+  box-sizing: border-box;
 }
 .nav-main {
   display: flex;
@@ -52,7 +53,6 @@
 .globe {
   height: 17px;
   width: 17px;
-  padding: 1px 6px;
 }
 .globe:hover {
   cursor: pointer;
@@ -64,8 +64,8 @@
   padding-right: 8px;
 }
 .navlinks {
-  margin-left: 16px;
-  margin-right: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   font-size: 14px;
   height: 100%;
   display: flex;
