--- a/src/pages/signin.css
+++ b/src/pages/signin.css
@@ -48,6 +48,7 @@
 }
 .signin-email-input {
   padding: 16px;
+  width: 100%;
   border-radius: 8px;
   font-size: 16px;
   font-family: "Coinbase Sans";
