--- a/src/components/UserHome/usersidebar.css
+++ b/src/components/UserHome/usersidebar.css
@@ -2,9 +2,13 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-
   border-right: 1px solid rgb(222, 223, 226);
   padding: 16px;
+  background-color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
 }
 .small-cb-logo-wrapper {
   padding-top: 8px;
