--- a/src/components/UserHome/usertopbar.css
+++ b/src/components/UserHome/usertopbar.css
@@ -3,11 +3,14 @@
   justify-content: space-between;
   border: 1px solid rgb(222, 223, 226);
   border-left: none;
+  border-top: none;
   padding-top: 16px;
   padding-left: 16px;
   padding-right: 16px;
-  width: 100%;
   height: 76px;
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 .top-bar-left {
   display: flex;
@@ -21,6 +24,7 @@
 }
 .top-bar-right {
   display: flex;
+  justify-content: flex-end;
   flex: 1;
   gap: 8px;
 }
@@ -58,7 +62,7 @@
   padding-right: 16px;
   padding-top: 1px;
   padding-bottom: 1px;
-
+  cursor: pointer;
   display: flex;
   border: none;
   justify-content: center;
@@ -86,6 +90,8 @@
   font-weight: 500;
   font-size: 16px;
   font-family: "Coinbase Sans";
+  cursor: pointer;
+
   -webkit-font-smoothing: antialiased;
 }
 
@@ -97,6 +103,7 @@
   width: 40px;
   height: 40px;
   background-color: rgb(238, 240, 243);
+  cursor: pointer;
 }
 .bell-icon {
   height: 60%;
@@ -104,6 +111,7 @@
 }
 .more-icon {
   height: 50%;
+  cursor: pointer;
 }
 .profile-button {
   border-radius: 1000px;
@@ -117,4 +125,5 @@
   font-family: "Coinbase Sans";
   font-size: 16px;
   font-weight: 400;
+  cursor: pointer;
 }
