--- a/src/pages/singuppage.css
+++ b/src/pages/singuppage.css
@@ -98,6 +98,7 @@
   height: 22px;
   width: 22px;
   margin: 0;
+  cursor: pointer;
 }
 .useragreement-wrapper {
   display: flex;
@@ -114,7 +115,7 @@
 .freeaccount-button {
   margin-top: 16px;
   margin-bottom: 24px;
-  background-color: rgb(128, 169, 255);
+  background-color: rgb(0, 82, 255);
   color: white;
   height: 56px;
   border-radius: 56px;
@@ -123,6 +124,10 @@
   font-size: 16px;
   font-weight: 500;
   font-family: "Coinbase Sans";
+  cursor: pointer;
+}
+.freeaccount-button:hover {
+  background-color: rgb(1, 76, 236);
 }
 .signupfor-business {
   text-align: center;
