--- a/src/components/ProfileDropdown/profiledrop.css
+++ b/src/components/ProfileDropdown/profiledrop.css
@@ -33,6 +33,7 @@
   padding: 24px;
   border-top: 1px solid rgb(222, 223, 226);
   border-bottom: 2px solid rgb(222, 223, 226);
+  gap: 16px;
 }
 .left-advanced {
   padding: 16px;
@@ -67,6 +68,9 @@
   height: 157px;
   width: 157px;
 }
+.right-advanced:hover {
+  background-color: rgb(238, 240, 243);
+}
 .new {
   color: rgb(0, 82, 255);
   background-color: rgb(211, 225, 255);
@@ -90,6 +94,9 @@
   padding-right: 24px;
   gap: 12px;
   cursor: pointer;
+}
+.profile-options:hover {
+  background-color: rgb(250, 250, 250);
 }
 .red {
   color: rgb(207, 32, 47);
