--- a/src/components/MainPage/mainpage.css
+++ b/src/components/MainPage/mainpage.css
@@ -8,6 +8,29 @@
   background-color: white;
   display: flex;
 }
+@media screen and (max-width: 650px) {
+  .main-centered {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 650px) {
+  .main-input-form,
+  .main-signup {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 650px) {
+  .p-email {
+    display: none;
+  }
+}
+@media screen and (min-width: 650px) {
+  .p-email-small {
+    display: none;
+  }
+}
 .phonescreen-wrapper {
   min-width: 636px;
   height: 750px;
@@ -82,6 +105,12 @@
   cursor: pointer;
 }
 .p-email {
+  font-weight: 600;
+  margin: 0;
+  font-size: 14px;
+  font-family: "Coinbase Sans";
+}
+.p-email-small {
   font-weight: 600;
   margin: 0;
   font-size: 14px;
