--- a/src/components/UserHome/usertopbar.css
+++ b/src/components/UserHome/usertopbar.css
@@ -12,6 +12,12 @@
   top: 0;
   background-color: white;
 }
+
+@media screen and (max-width: 1280px) {
+  .top-bar-wrapper {
+    margin-left: 5px;
+  }
+}
 .top-bar-left {
   display: flex;
   font-family: "Coinbase Sans";
@@ -39,6 +45,16 @@
   gap: 4px;
   margin-right: 16px;
 }
+@media screen and (max-width: 980px) {
+  .top-input-wrapper {
+    width: auto;
+  }
+}
+@media screen and (max-width: 980px) {
+  .asset-input {
+    display: none;
+  }
+}
 
 .asset-input {
   background-color: transparent;
@@ -48,11 +64,13 @@
   font-weight: 400;
   outline: none;
 }
+
 .magnifying-input-logo {
   height: 20px;
   width: 20px;
   margin-left: 16px;
   margin-right: 16px;
+  cursor: pointer;
 }
 .buy-sell-button {
   height: 40px;
