--- a/src/pages/userpage.css
+++ b/src/pages/userpage.css
@@ -7,6 +7,13 @@
   flex-direction: column;
   margin-left: 240px;
 }
+
+@media screen and (max-width: 1280px) {
+  .middle-wrapper {
+    margin-left: 87px;
+  }
+}
+
 .bottom-mid-wrapper {
   flex: 1;
   display: flex;
@@ -98,6 +105,12 @@
   flex-direction: column;
   border-left: 1px solid rgb(222, 223, 226);
   padding-right: 24px;
+}
+
+@media screen and (max-width: 1070px) {
+  .right-sidebar-wrapper {
+    display: none;
+  }
 }
 .top-right-sidebar {
   padding: 16px;
@@ -283,6 +296,7 @@
   flex-direction: column;
   padding-right: 70px;
 }
+
 .stock-words-top {
   color: rgb(10, 11, 13);
   line-height: 24px;
