--- a/src/components/UserHome/usersidebar.css
+++ b/src/components/UserHome/usersidebar.css
@@ -10,6 +10,11 @@
   top: 0;
   bottom: 0;
 }
+@media screen and (max-width: 770px) {
+  .user-sidebar-wrapper {
+    display: none;
+  }
+}
 .small-cb-logo-wrapper {
   padding-top: 8px;
   padding-left: 8px;
